// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden pipeline (b139.0 reference) > 1. Gaussian linear, subsonic OFF — magnitude snapshot 1`] = `
[
  -82.037126,
  -81.568344,
  -81.099566,
  -80.630789,
  -80.162015,
  -79.693243,
  -79.224474,
  -78.755707,
  -78.286943,
  -77.818182,
  -77.349423,
  -76.880668,
  -76.411915,
  -75.943166,
  -75.474419,
  -75.005676,
  -74.536936,
  -74.068199,
  -73.599466,
  -73.130737,
  -72.662011,
  -72.193289,
  -71.724571,
  -71.255857,
  -70.787147,
  -70.318441,
  -69.84974,
  -69.381043,
  -68.91235,
  -68.443663,
  -67.97498,
  -67.506302,
  -67.037629,
  -66.568961,
  -66.100299,
  -65.631642,
  -65.162991,
  -64.694346,
  -64.225707,
  -63.757074,
  -63.288447,
  -62.819827,
  -62.351213,
  -61.882606,
  -61.414007,
  -60.945414,
  -60.476829,
  -60.008252,
  -59.539682,
  -59.071121,
  -58.602568,
  -58.134023,
  -57.665487,
  -57.19696,
  -56.728442,
  -56.259934,
  -55.791435,
  -55.322947,
  -54.854469,
  -54.386001,
  -53.917544,
  -53.449098,
  -52.980664,
  -52.512242,
  -52.043831,
  -51.575433,
  -51.107048,
  -50.638676,
  -47.221231,
  -46.986916,
  -46.752616,
  -46.51833,
  -46.284059,
  -46.049804,
  -45.815564,
  -45.581341,
  -45.347134,
  -45.112945,
  -44.878773,
  -44.644619,
  -44.410484,
  -44.176368,
  -43.942272,
  -43.708196,
  -43.474141,
  -43.240107,
  -43.006094,
  -42.772105,
  -42.538138,
  -42.304195,
  -42.070277,
  -41.836383,
  -41.602516,
  -41.368674,
  -41.13486,
  -40.901074,
  -40.667317,
  -40.433589,
  -40.199891,
  -39.966224,
  -39.732589,
  -39.498987,
  -39.265419,
  -39.031885,
  -38.798387,
  -38.564925,
  -38.331501,
  -38.098115,
  -37.864769,
  -37.631464,
  -37.398201,
  -37.16498,
  -36.931803,
  -36.698672,
  -36.465588,
  -36.232551,
  -35.999563,
  -35.766626,
  -35.53374,
  -35.300908,
  -35.068131,
  -34.835409,
  -34.602746,
  -34.370141,
  -34.137598,
  -33.905117,
  -33.6727,
  -33.44035,
  -33.208067,
  -32.975854,
  -32.743712,
  -32.511644,
  -32.279651,
  -32.047736,
  -31.8159,
  -31.584147,
  -31.352477,
  -31.120893,
  -30.889399,
  -30.657995,
  -30.426685,
  -30.195471,
  -29.964355,
  -29.733341,
  -29.502431,
  -29.271628,
  -29.040935,
  -28.810354,
  -28.579889,
  -28.349543,
  -28.11932,
  -27.889222,
  -27.659252,
  -27.429416,
  -27.199715,
  -26.970153,
  -26.740735,
  -26.511464,
  -26.282345,
  -26.05338,
  -25.824576,
  -25.595934,
  -25.367461,
  -25.139161,
  -24.911038,
  -24.683097,
  -24.455343,
  -24.227781,
  -24.000416,
  -23.773254,
  -23.546299,
  -23.319558,
  -23.093035,
  -22.866738,
  -22.640672,
  -22.414843,
  -22.189257,
  -21.963921,
  -21.738842,
  -21.514026,
  -21.289481,
  -21.065213,
  -20.84123,
  -20.61754,
  -20.394149,
  -20.171068,
  -19.948302,
  -19.725861,
  -19.503754,
  -19.281988,
  -19.060574,
  -18.839519,
  -18.618835,
  -18.39853,
  -18.178614,
  -17.959098,
  -17.739992,
  -17.521306,
  -17.303053,
  -17.085241,
  -16.867885,
  -16.650994,
  -16.434582,
  -16.21866,
  -16.003241,
  -15.788339,
  -15.573966,
  -15.360135,
  -15.146862,
  -14.93416,
  -14.722043,
  -14.510527,
  -14.299627,
  -14.089358,
  -13.879736,
  -13.670778,
  -13.462501,
  -13.25492,
  -13.048054,
  -12.841921,
  -12.636539,
  -12.431926,
  -12.228101,
  -12.025084,
  -11.822895,
  -11.621553,
  -11.42108,
  -11.221496,
  -11.022823,
  -10.825083,
  -10.628298,
  -10.432492,
  -10.237686,
  -10.043906,
  -9.851174,
  -9.659516,
  -9.468957,
  -9.279522,
  -9.091237,
  -8.904128,
  -8.718222,
  -8.533546,
  -8.350128,
  -8.167996,
  -7.987179,
  -7.807705,
  -7.629603,
  -7.452904,
  -7.277637,
  -7.103833,
  -6.931523,
  -6.760738,
  -6.591509,
  -6.423868,
  -6.257848,
  -6.09348,
  -5.930798,
  -5.769834,
  -5.610621,
  -5.453193,
  -5.297583,
  -5.143824,
  -4.99195,
  -4.841994,
  -4.693991,
  -4.547973,
  -4.403974,
  -4.262027,
  -4.122165,
  -3.984421,
  -3.848827,
  -3.715415,
  -3.584218,
  -3.455265,
  -3.328587,
  -3.204215,
  -3.082176,
  -2.9625,
  -2.845213,
  -2.730341,
  -2.617911,
  -2.507945,
  -2.400466,
  -2.295495,
  -2.193052,
  -2.093155,
  -1.99582,
  -1.901063,
  -1.808894,
  -1.719325,
  -1.632364,
  -1.548018,
  -1.466289,
  -1.387179,
  -1.310686,
  -1.236807,
  -1.165535,
  -1.096859,
  -1.030768,
  -0.967245,
  -0.906272,
  -0.847826,
  -0.791883,
  -0.738414,
  -0.687388,
  -0.63877,
  -0.592522,
  -0.548602,
  -0.506967,
  -0.467568,
  -0.430356,
  -0.395276,
  -0.362273,
  -0.331289,
  -0.302261,
  -0.275127,
  -0.24982,
  -0.226274,
  -0.204419,
  -0.184185,
  -0.1655,
  -0.148293,
  -0.132489,
  -0.118017,
  -0.104803,
  -0.092774,
  -0.081858,
  -0.071985,
  -0.063085,
  -0.05509,
  -0.047932,
  -0.041548,
  -0.035875,
  -0.030853,
  -0.026427,
  -0.02254,
  -0.019142,
  -0.016184,
  -0.013621,
  -0.01141,
  -0.009512,
  -0.00789,
  -0.006511,
  -0.005346,
  -0.004365,
  -0.003544,
  -0.002862,
  -0.002297,
  -0.001833,
  -0.001453,
  -0.001145,
  -0.000897,
  -0.000697,
  -0.000538,
  -0.000413,
  -0.000314,
  -0.000237,
  -0.000178,
  -0.000132,
  -0.000098,
  -0.000072,
  -0.000052,
  -0.000037,
  -0.000027,
  -0.000019,
  -0.000013,
  -0.000009,
  -0.000006,
  -0.000004,
  -0.000003,
  -0.000002,
  -0.000001,
  -0.000001,
  -0.000001,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  0,
  0,
  0,
  0,
  0,
  0,
  -0.064462,
  -0.181477,
  -0.298492,
  -0.415507,
  -0.532522,
  -0.649537,
  -0.766552,
  -0.883567,
  -1.000583,
  -1.117598,
  -1.234613,
  -1.351628,
  -1.468643,
  -1.585658,
  -1.702673,
  -1.819688,
  -1.936703,
  -2.053718,
  -2.170733,
  -2.287748,
  -2.404763,
  -2.521779,
  -2.638794,
  -2.755809,
  -2.872824,
  -2.989839,
  -3.106854,
  -3.223869,
  -3.340884,
  -3.457899,
  -3.574914,
  -3.691929,
  -3.808944,
  -3.92596,
  -4.042975,
  -4.15999,
  -4.277005,
  -4.39402,
  -4.511035,
  -4.62805,
  -4.745065,
  -4.86208,
  -4.979095,
  -5.09611,
  -5.213125,
  -5.33014,
  -5.447156,
  -5.564171,
  -5.681186,
  -5.798201,
  -5.915216,
  -6.032231,
  -6.149246,
  -6.266261,
  -6.383276,
  -6.500291,
  -6.617306,
  -6.734321,
  -6.851336,
  -6.968352,
  -7.085367,
  -7.202382,
  -7.319397,
  -7.436412,
  -7.553427,
  -7.670442,
  -7.787457,
  -7.904472,
  -8.021487,
  -8.138502,
  -8.255517,
  -8.372533,
  -8.489548,
  -8.606563,
  -8.723578,
  -8.840593,
  -8.957608,
  -9.074623,
  -9.191638,
  -9.308653,
  -9.425668,
  -9.542683,
  -9.659698,
  -9.776713,
  -9.893729,
  -10.010744,
  -10.127759,
  -10.244774,
  -10.361789,
  -10.478804,
  -10.595819,
  -10.712834,
  -10.829849,
  -10.946864,
  -11.063879,
  -11.180894,
  -11.29791,
  -11.414925,
  -11.53194,
  -11.648955,
  -11.76597,
  -11.882985,
  -12,
]
`;

exports[`golden pipeline (b139.0 reference) > 2. Gaussian linear, subsonic ON — magnitude snapshot 1`] = `
[
  -177.492661,
  -176.084545,
  -174.676432,
  -173.26832,
  -171.860211,
  -170.452105,
  -169.044001,
  -167.6359,
  -166.227801,
  -164.819705,
  -163.411612,
  -162.003522,
  -160.595435,
  -159.187351,
  -157.779269,
  -156.371192,
  -154.963117,
  -153.555046,
  -152.146978,
  -150.738914,
  -149.330854,
  -147.922797,
  -146.514745,
  -145.106696,
  -143.698651,
  -142.290611,
  -140.882575,
  -139.474543,
  -138.066516,
  -136.658494,
  -135.250477,
  -133.842464,
  -132.434457,
  -131.026455,
  -129.618459,
  -128.210468,
  -126.802483,
  -125.394503,
  -123.98653,
  -122.578564,
  -121.170604,
  -119.762651,
  -118.354705,
  -116.946766,
  -115.538835,
  -114.130912,
  -112.722997,
  -111.315091,
  -109.907195,
  -108.499308,
  -107.091432,
  -105.683568,
  -104.275716,
  -102.867877,
  -101.460053,
  -100.052245,
  -98.644456,
  -97.236687,
  -95.828942,
  -94.421223,
  -93.013536,
  -91.605885,
  -90.198276,
  -88.790718,
  -87.38322,
  -85.975794,
  -84.568455,
  -83.161221,
  -78.805028,
  -77.632107,
  -76.459375,
  -75.286877,
  -74.114663,
  -72.942801,
  -71.771371,
  -70.600473,
  -69.430232,
  -68.260802,
  -67.092372,
  -65.925178,
  -64.75951,
  -63.595726,
  -62.434265,
  -61.275669,
  -60.120601,
  -58.969871,
  -57.824466,
  -56.685583,
  -55.554662,
  -54.433429,
  -53.323932,
  -52.228573,
  -51.15014,
  -50.09181,
  -49.057138,
  -48.050007,
  -47.07453,
  -46.134914,
  -45.235257,
  -44.37932,
  -43.570266,
  -42.810422,
  -42.101079,
  -41.442379,
  -40.833302,
  -40.271758,
  -39.754766,
  -39.278687,
  -38.839483,
  -38.432957,
  -38.054958,
  -37.701541,
  -37.369067,
  -37.054267,
  -36.754263,
  -36.466562,
  -36.189036,
  -35.919889,
  -35.657614,
  -35.400964,
  -35.148906,
  -34.900591,
  -34.655326,
  -34.412545,
  -34.171786,
  -33.932677,
  -33.694913,
  -33.458251,
  -33.222492,
  -32.987477,
  -32.753077,
  -32.519189,
  -32.28573,
  -32.052633,
  -31.819845,
  -31.587325,
  -31.355037,
  -31.122956,
  -30.89106,
  -30.659333,
  -30.427763,
  -30.196339,
  -29.965055,
  -29.733904,
  -29.502885,
  -29.271993,
  -29.041229,
  -28.810591,
  -28.58008,
  -28.349697,
  -28.119444,
  -27.889322,
  -27.659333,
  -27.42948,
  -27.199767,
  -26.970195,
  -26.740769,
  -26.511492,
  -26.282367,
  -26.053398,
  -25.82459,
  -25.595946,
  -25.367471,
  -25.139168,
  -24.911044,
  -24.683102,
  -24.455347,
  -24.227784,
  -24.000419,
  -23.773256,
  -23.5463,
  -23.319559,
  -23.093036,
  -22.866739,
  -22.640672,
  -22.414843,
  -22.189257,
  -21.963921,
  -21.738842,
  -21.514026,
  -21.289481,
  -21.065213,
  -20.84123,
  -20.61754,
  -20.39415,
  -20.171068,
  -19.948302,
  -19.725861,
  -19.503754,
  -19.281988,
  -19.060574,
  -18.839519,
  -18.618835,
  -18.39853,
  -18.178614,
  -17.959098,
  -17.739992,
  -17.521306,
  -17.303053,
  -17.085241,
  -16.867885,
  -16.650994,
  -16.434582,
  -16.21866,
  -16.003241,
  -15.788339,
  -15.573966,
  -15.360135,
  -15.146862,
  -14.93416,
  -14.722043,
  -14.510527,
  -14.299627,
  -14.089358,
  -13.879736,
  -13.670778,
  -13.462501,
  -13.25492,
  -13.048054,
  -12.841921,
  -12.636539,
  -12.431926,
  -12.228101,
  -12.025084,
  -11.822895,
  -11.621553,
  -11.42108,
  -11.221496,
  -11.022823,
  -10.825083,
  -10.628298,
  -10.432492,
  -10.237686,
  -10.043906,
  -9.851174,
  -9.659516,
  -9.468957,
  -9.279522,
  -9.091237,
  -8.904128,
  -8.718222,
  -8.533546,
  -8.350128,
  -8.167996,
  -7.987179,
  -7.807705,
  -7.629603,
  -7.452904,
  -7.277637,
  -7.103833,
  -6.931523,
  -6.760738,
  -6.591509,
  -6.423868,
  -6.257848,
  -6.09348,
  -5.930798,
  -5.769834,
  -5.610621,
  -5.453193,
  -5.297583,
  -5.143824,
  -4.99195,
  -4.841994,
  -4.693991,
  -4.547973,
  -4.403974,
  -4.262027,
  -4.122165,
  -3.984421,
  -3.848827,
  -3.715415,
  -3.584218,
  -3.455265,
  -3.328587,
  -3.204215,
  -3.082176,
  -2.9625,
  -2.845213,
  -2.730341,
  -2.617911,
  -2.507945,
  -2.400466,
  -2.295495,
  -2.193052,
  -2.093155,
  -1.99582,
  -1.901063,
  -1.808894,
  -1.719325,
  -1.632364,
  -1.548018,
  -1.466289,
  -1.387179,
  -1.310686,
  -1.236807,
  -1.165535,
  -1.096859,
  -1.030768,
  -0.967245,
  -0.906272,
  -0.847826,
  -0.791883,
  -0.738414,
  -0.687388,
  -0.63877,
  -0.592522,
  -0.548602,
  -0.506967,
  -0.467568,
  -0.430356,
  -0.395276,
  -0.362273,
  -0.331289,
  -0.302261,
  -0.275127,
  -0.24982,
  -0.226274,
  -0.204419,
  -0.184185,
  -0.1655,
  -0.148293,
  -0.132489,
  -0.118017,
  -0.104803,
  -0.092774,
  -0.081858,
  -0.071985,
  -0.063085,
  -0.05509,
  -0.047932,
  -0.041548,
  -0.035875,
  -0.030853,
  -0.026427,
  -0.02254,
  -0.019142,
  -0.016184,
  -0.013621,
  -0.01141,
  -0.009512,
  -0.00789,
  -0.006511,
  -0.005346,
  -0.004365,
  -0.003544,
  -0.002862,
  -0.002297,
  -0.001833,
  -0.001453,
  -0.001145,
  -0.000897,
  -0.000697,
  -0.000538,
  -0.000413,
  -0.000314,
  -0.000237,
  -0.000178,
  -0.000132,
  -0.000098,
  -0.000072,
  -0.000052,
  -0.000037,
  -0.000027,
  -0.000019,
  -0.000013,
  -0.000009,
  -0.000006,
  -0.000004,
  -0.000003,
  -0.000002,
  -0.000001,
  -0.000001,
  -0.000001,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  0,
  0,
  0,
  0,
  0,
  0,
  -0.064462,
  -0.181477,
  -0.298492,
  -0.415507,
  -0.532522,
  -0.649537,
  -0.766552,
  -0.883567,
  -1.000583,
  -1.117598,
  -1.234613,
  -1.351628,
  -1.468643,
  -1.585658,
  -1.702673,
  -1.819688,
  -1.936703,
  -2.053718,
  -2.170733,
  -2.287748,
  -2.404763,
  -2.521779,
  -2.638794,
  -2.755809,
  -2.872824,
  -2.989839,
  -3.106854,
  -3.223869,
  -3.340884,
  -3.457899,
  -3.574914,
  -3.691929,
  -3.808944,
  -3.92596,
  -4.042975,
  -4.15999,
  -4.277005,
  -4.39402,
  -4.511035,
  -4.62805,
  -4.745065,
  -4.86208,
  -4.979095,
  -5.09611,
  -5.213125,
  -5.33014,
  -5.447156,
  -5.564171,
  -5.681186,
  -5.798201,
  -5.915216,
  -6.032231,
  -6.149246,
  -6.266261,
  -6.383276,
  -6.500291,
  -6.617306,
  -6.734321,
  -6.851336,
  -6.968352,
  -7.085367,
  -7.202382,
  -7.319397,
  -7.436412,
  -7.553427,
  -7.670442,
  -7.787457,
  -7.904472,
  -8.021487,
  -8.138502,
  -8.255517,
  -8.372533,
  -8.489548,
  -8.606563,
  -8.723578,
  -8.840593,
  -8.957608,
  -9.074623,
  -9.191638,
  -9.308653,
  -9.425668,
  -9.542683,
  -9.659698,
  -9.776713,
  -9.893729,
  -10.010744,
  -10.127759,
  -10.244774,
  -10.361789,
  -10.478804,
  -10.595819,
  -10.712834,
  -10.829849,
  -10.946864,
  -11.063879,
  -11.180894,
  -11.29791,
  -11.414925,
  -11.53194,
  -11.648955,
  -11.76597,
  -11.882985,
  -12,
]
`;

exports[`golden pipeline (b139.0 reference) > 3. Gaussian min-phase, subsonic OFF — magnitude snapshot 1`] = `
[
  -82.037126,
  -81.568344,
  -81.099566,
  -80.630789,
  -80.162015,
  -79.693243,
  -79.224474,
  -78.755707,
  -78.286943,
  -77.818182,
  -77.349423,
  -76.880668,
  -76.411915,
  -75.943166,
  -75.474419,
  -75.005676,
  -74.536936,
  -74.068199,
  -73.599466,
  -73.130737,
  -72.662011,
  -72.193289,
  -71.724571,
  -71.255857,
  -70.787147,
  -70.318441,
  -69.84974,
  -69.381043,
  -68.91235,
  -68.443663,
  -67.97498,
  -67.506302,
  -67.037629,
  -66.568961,
  -66.100299,
  -65.631642,
  -65.162991,
  -64.694346,
  -64.225707,
  -63.757074,
  -63.288447,
  -62.819827,
  -62.351213,
  -61.882606,
  -61.414007,
  -60.945414,
  -60.476829,
  -60.008252,
  -59.539682,
  -59.071121,
  -58.602568,
  -58.134023,
  -57.665487,
  -57.19696,
  -56.728442,
  -56.259934,
  -55.791435,
  -55.322947,
  -54.854469,
  -54.386001,
  -53.917544,
  -53.449098,
  -52.980664,
  -52.512242,
  -52.043831,
  -51.575433,
  -51.107048,
  -50.638676,
  -47.221231,
  -46.986916,
  -46.752616,
  -46.51833,
  -46.284059,
  -46.049804,
  -45.815564,
  -45.581341,
  -45.347134,
  -45.112945,
  -44.878773,
  -44.644619,
  -44.410484,
  -44.176368,
  -43.942272,
  -43.708196,
  -43.474141,
  -43.240107,
  -43.006094,
  -42.772105,
  -42.538138,
  -42.304195,
  -42.070277,
  -41.836383,
  -41.602516,
  -41.368674,
  -41.13486,
  -40.901074,
  -40.667317,
  -40.433589,
  -40.199891,
  -39.966224,
  -39.732589,
  -39.498987,
  -39.265419,
  -39.031885,
  -38.798387,
  -38.564925,
  -38.331501,
  -38.098115,
  -37.864769,
  -37.631464,
  -37.398201,
  -37.16498,
  -36.931803,
  -36.698672,
  -36.465588,
  -36.232551,
  -35.999563,
  -35.766626,
  -35.53374,
  -35.300908,
  -35.068131,
  -34.835409,
  -34.602746,
  -34.370141,
  -34.137598,
  -33.905117,
  -33.6727,
  -33.44035,
  -33.208067,
  -32.975854,
  -32.743712,
  -32.511644,
  -32.279651,
  -32.047736,
  -31.8159,
  -31.584147,
  -31.352477,
  -31.120893,
  -30.889399,
  -30.657995,
  -30.426685,
  -30.195471,
  -29.964355,
  -29.733341,
  -29.502431,
  -29.271628,
  -29.040935,
  -28.810354,
  -28.579889,
  -28.349543,
  -28.11932,
  -27.889222,
  -27.659252,
  -27.429416,
  -27.199715,
  -26.970153,
  -26.740735,
  -26.511464,
  -26.282345,
  -26.05338,
  -25.824576,
  -25.595934,
  -25.367461,
  -25.139161,
  -24.911038,
  -24.683097,
  -24.455343,
  -24.227781,
  -24.000416,
  -23.773254,
  -23.546299,
  -23.319558,
  -23.093035,
  -22.866738,
  -22.640672,
  -22.414843,
  -22.189257,
  -21.963921,
  -21.738842,
  -21.514026,
  -21.289481,
  -21.065213,
  -20.84123,
  -20.61754,
  -20.394149,
  -20.171068,
  -19.948302,
  -19.725861,
  -19.503754,
  -19.281988,
  -19.060574,
  -18.839519,
  -18.618835,
  -18.39853,
  -18.178614,
  -17.959098,
  -17.739992,
  -17.521306,
  -17.303053,
  -17.085241,
  -16.867885,
  -16.650994,
  -16.434582,
  -16.21866,
  -16.003241,
  -15.788339,
  -15.573966,
  -15.360135,
  -15.146862,
  -14.93416,
  -14.722043,
  -14.510527,
  -14.299627,
  -14.089358,
  -13.879736,
  -13.670778,
  -13.462501,
  -13.25492,
  -13.048054,
  -12.841921,
  -12.636539,
  -12.431926,
  -12.228101,
  -12.025084,
  -11.822895,
  -11.621553,
  -11.42108,
  -11.221496,
  -11.022823,
  -10.825083,
  -10.628298,
  -10.432492,
  -10.237686,
  -10.043906,
  -9.851174,
  -9.659516,
  -9.468957,
  -9.279522,
  -9.091237,
  -8.904128,
  -8.718222,
  -8.533546,
  -8.350128,
  -8.167996,
  -7.987179,
  -7.807705,
  -7.629603,
  -7.452904,
  -7.277637,
  -7.103833,
  -6.931523,
  -6.760738,
  -6.591509,
  -6.423868,
  -6.257848,
  -6.09348,
  -5.930798,
  -5.769834,
  -5.610621,
  -5.453193,
  -5.297583,
  -5.143824,
  -4.99195,
  -4.841994,
  -4.693991,
  -4.547973,
  -4.403974,
  -4.262027,
  -4.122165,
  -3.984421,
  -3.848827,
  -3.715415,
  -3.584218,
  -3.455265,
  -3.328587,
  -3.204215,
  -3.082176,
  -2.9625,
  -2.845213,
  -2.730341,
  -2.617911,
  -2.507945,
  -2.400466,
  -2.295495,
  -2.193052,
  -2.093155,
  -1.99582,
  -1.901063,
  -1.808894,
  -1.719325,
  -1.632364,
  -1.548018,
  -1.466289,
  -1.387179,
  -1.310686,
  -1.236807,
  -1.165535,
  -1.096859,
  -1.030768,
  -0.967245,
  -0.906272,
  -0.847826,
  -0.791883,
  -0.738414,
  -0.687388,
  -0.63877,
  -0.592522,
  -0.548602,
  -0.506967,
  -0.467568,
  -0.430356,
  -0.395276,
  -0.362273,
  -0.331289,
  -0.302261,
  -0.275127,
  -0.24982,
  -0.226274,
  -0.204419,
  -0.184185,
  -0.1655,
  -0.148293,
  -0.132489,
  -0.118017,
  -0.104803,
  -0.092774,
  -0.081858,
  -0.071985,
  -0.063085,
  -0.05509,
  -0.047932,
  -0.041548,
  -0.035875,
  -0.030853,
  -0.026427,
  -0.02254,
  -0.019142,
  -0.016184,
  -0.013621,
  -0.01141,
  -0.009512,
  -0.00789,
  -0.006511,
  -0.005346,
  -0.004365,
  -0.003544,
  -0.002862,
  -0.002297,
  -0.001833,
  -0.001453,
  -0.001145,
  -0.000897,
  -0.000697,
  -0.000538,
  -0.000413,
  -0.000314,
  -0.000237,
  -0.000178,
  -0.000132,
  -0.000098,
  -0.000072,
  -0.000052,
  -0.000037,
  -0.000027,
  -0.000019,
  -0.000013,
  -0.000009,
  -0.000006,
  -0.000004,
  -0.000003,
  -0.000002,
  -0.000001,
  -0.000001,
  -0.000001,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  0,
  0,
  0,
  0,
  0,
  0,
  -0.064462,
  -0.181477,
  -0.298492,
  -0.415507,
  -0.532522,
  -0.649537,
  -0.766552,
  -0.883567,
  -1.000583,
  -1.117598,
  -1.234613,
  -1.351628,
  -1.468643,
  -1.585658,
  -1.702673,
  -1.819688,
  -1.936703,
  -2.053718,
  -2.170733,
  -2.287748,
  -2.404763,
  -2.521779,
  -2.638794,
  -2.755809,
  -2.872824,
  -2.989839,
  -3.106854,
  -3.223869,
  -3.340884,
  -3.457899,
  -3.574914,
  -3.691929,
  -3.808944,
  -3.92596,
  -4.042975,
  -4.15999,
  -4.277005,
  -4.39402,
  -4.511035,
  -4.62805,
  -4.745065,
  -4.86208,
  -4.979095,
  -5.09611,
  -5.213125,
  -5.33014,
  -5.447156,
  -5.564171,
  -5.681186,
  -5.798201,
  -5.915216,
  -6.032231,
  -6.149246,
  -6.266261,
  -6.383276,
  -6.500291,
  -6.617306,
  -6.734321,
  -6.851336,
  -6.968352,
  -7.085367,
  -7.202382,
  -7.319397,
  -7.436412,
  -7.553427,
  -7.670442,
  -7.787457,
  -7.904472,
  -8.021487,
  -8.138502,
  -8.255517,
  -8.372533,
  -8.489548,
  -8.606563,
  -8.723578,
  -8.840593,
  -8.957608,
  -9.074623,
  -9.191638,
  -9.308653,
  -9.425668,
  -9.542683,
  -9.659698,
  -9.776713,
  -9.893729,
  -10.010744,
  -10.127759,
  -10.244774,
  -10.361789,
  -10.478804,
  -10.595819,
  -10.712834,
  -10.829849,
  -10.946864,
  -11.063879,
  -11.180894,
  -11.29791,
  -11.414925,
  -11.53194,
  -11.648955,
  -11.76597,
  -11.882985,
  -12,
]
`;

exports[`golden pipeline (b139.0 reference) > 4. Gaussian min-phase, subsonic ON — magnitude snapshot 1`] = `
[
  -177.492661,
  -176.084545,
  -174.676432,
  -173.26832,
  -171.860211,
  -170.452105,
  -169.044001,
  -167.6359,
  -166.227801,
  -164.819705,
  -163.411612,
  -162.003522,
  -160.595435,
  -159.187351,
  -157.779269,
  -156.371192,
  -154.963117,
  -153.555046,
  -152.146978,
  -150.738914,
  -149.330854,
  -147.922797,
  -146.514745,
  -145.106696,
  -143.698651,
  -142.290611,
  -140.882575,
  -139.474543,
  -138.066516,
  -136.658494,
  -135.250477,
  -133.842464,
  -132.434457,
  -131.026455,
  -129.618459,
  -128.210468,
  -126.802483,
  -125.394503,
  -123.98653,
  -122.578564,
  -121.170604,
  -119.762651,
  -118.354705,
  -116.946766,
  -115.538835,
  -114.130912,
  -112.722997,
  -111.315091,
  -109.907195,
  -108.499308,
  -107.091432,
  -105.683568,
  -104.275716,
  -102.867877,
  -101.460053,
  -100.052245,
  -98.644456,
  -97.236687,
  -95.828942,
  -94.421223,
  -93.013536,
  -91.605885,
  -90.198276,
  -88.790718,
  -87.38322,
  -85.975794,
  -84.568455,
  -83.161221,
  -78.805028,
  -77.632107,
  -76.459375,
  -75.286877,
  -74.114663,
  -72.942801,
  -71.771371,
  -70.600473,
  -69.430232,
  -68.260802,
  -67.092372,
  -65.925178,
  -64.75951,
  -63.595726,
  -62.434265,
  -61.275669,
  -60.120601,
  -58.969871,
  -57.824466,
  -56.685583,
  -55.554662,
  -54.433429,
  -53.323932,
  -52.228573,
  -51.15014,
  -50.09181,
  -49.057138,
  -48.050007,
  -47.07453,
  -46.134914,
  -45.235257,
  -44.37932,
  -43.570266,
  -42.810422,
  -42.101079,
  -41.442379,
  -40.833302,
  -40.271758,
  -39.754766,
  -39.278687,
  -38.839483,
  -38.432957,
  -38.054958,
  -37.701541,
  -37.369067,
  -37.054267,
  -36.754263,
  -36.466562,
  -36.189036,
  -35.919889,
  -35.657614,
  -35.400964,
  -35.148906,
  -34.900591,
  -34.655326,
  -34.412545,
  -34.171786,
  -33.932677,
  -33.694913,
  -33.458251,
  -33.222492,
  -32.987477,
  -32.753077,
  -32.519189,
  -32.28573,
  -32.052633,
  -31.819845,
  -31.587325,
  -31.355037,
  -31.122956,
  -30.89106,
  -30.659333,
  -30.427763,
  -30.196339,
  -29.965055,
  -29.733904,
  -29.502885,
  -29.271993,
  -29.041229,
  -28.810591,
  -28.58008,
  -28.349697,
  -28.119444,
  -27.889322,
  -27.659333,
  -27.42948,
  -27.199767,
  -26.970195,
  -26.740769,
  -26.511492,
  -26.282367,
  -26.053398,
  -25.82459,
  -25.595946,
  -25.367471,
  -25.139168,
  -24.911044,
  -24.683102,
  -24.455347,
  -24.227784,
  -24.000419,
  -23.773256,
  -23.5463,
  -23.319559,
  -23.093036,
  -22.866739,
  -22.640672,
  -22.414843,
  -22.189257,
  -21.963921,
  -21.738842,
  -21.514026,
  -21.289481,
  -21.065213,
  -20.84123,
  -20.61754,
  -20.39415,
  -20.171068,
  -19.948302,
  -19.725861,
  -19.503754,
  -19.281988,
  -19.060574,
  -18.839519,
  -18.618835,
  -18.39853,
  -18.178614,
  -17.959098,
  -17.739992,
  -17.521306,
  -17.303053,
  -17.085241,
  -16.867885,
  -16.650994,
  -16.434582,
  -16.21866,
  -16.003241,
  -15.788339,
  -15.573966,
  -15.360135,
  -15.146862,
  -14.93416,
  -14.722043,
  -14.510527,
  -14.299627,
  -14.089358,
  -13.879736,
  -13.670778,
  -13.462501,
  -13.25492,
  -13.048054,
  -12.841921,
  -12.636539,
  -12.431926,
  -12.228101,
  -12.025084,
  -11.822895,
  -11.621553,
  -11.42108,
  -11.221496,
  -11.022823,
  -10.825083,
  -10.628298,
  -10.432492,
  -10.237686,
  -10.043906,
  -9.851174,
  -9.659516,
  -9.468957,
  -9.279522,
  -9.091237,
  -8.904128,
  -8.718222,
  -8.533546,
  -8.350128,
  -8.167996,
  -7.987179,
  -7.807705,
  -7.629603,
  -7.452904,
  -7.277637,
  -7.103833,
  -6.931523,
  -6.760738,
  -6.591509,
  -6.423868,
  -6.257848,
  -6.09348,
  -5.930798,
  -5.769834,
  -5.610621,
  -5.453193,
  -5.297583,
  -5.143824,
  -4.99195,
  -4.841994,
  -4.693991,
  -4.547973,
  -4.403974,
  -4.262027,
  -4.122165,
  -3.984421,
  -3.848827,
  -3.715415,
  -3.584218,
  -3.455265,
  -3.328587,
  -3.204215,
  -3.082176,
  -2.9625,
  -2.845213,
  -2.730341,
  -2.617911,
  -2.507945,
  -2.400466,
  -2.295495,
  -2.193052,
  -2.093155,
  -1.99582,
  -1.901063,
  -1.808894,
  -1.719325,
  -1.632364,
  -1.548018,
  -1.466289,
  -1.387179,
  -1.310686,
  -1.236807,
  -1.165535,
  -1.096859,
  -1.030768,
  -0.967245,
  -0.906272,
  -0.847826,
  -0.791883,
  -0.738414,
  -0.687388,
  -0.63877,
  -0.592522,
  -0.548602,
  -0.506967,
  -0.467568,
  -0.430356,
  -0.395276,
  -0.362273,
  -0.331289,
  -0.302261,
  -0.275127,
  -0.24982,
  -0.226274,
  -0.204419,
  -0.184185,
  -0.1655,
  -0.148293,
  -0.132489,
  -0.118017,
  -0.104803,
  -0.092774,
  -0.081858,
  -0.071985,
  -0.063085,
  -0.05509,
  -0.047932,
  -0.041548,
  -0.035875,
  -0.030853,
  -0.026427,
  -0.02254,
  -0.019142,
  -0.016184,
  -0.013621,
  -0.01141,
  -0.009512,
  -0.00789,
  -0.006511,
  -0.005346,
  -0.004365,
  -0.003544,
  -0.002862,
  -0.002297,
  -0.001833,
  -0.001453,
  -0.001145,
  -0.000897,
  -0.000697,
  -0.000538,
  -0.000413,
  -0.000314,
  -0.000237,
  -0.000178,
  -0.000132,
  -0.000098,
  -0.000072,
  -0.000052,
  -0.000037,
  -0.000027,
  -0.000019,
  -0.000013,
  -0.000009,
  -0.000006,
  -0.000004,
  -0.000003,
  -0.000002,
  -0.000001,
  -0.000001,
  -0.000001,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  -0,
  0,
  0,
  0,
  0,
  0,
  0,
  -0.064462,
  -0.181477,
  -0.298492,
  -0.415507,
  -0.532522,
  -0.649537,
  -0.766552,
  -0.883567,
  -1.000583,
  -1.117598,
  -1.234613,
  -1.351628,
  -1.468643,
  -1.585658,
  -1.702673,
  -1.819688,
  -1.936703,
  -2.053718,
  -2.170733,
  -2.287748,
  -2.404763,
  -2.521779,
  -2.638794,
  -2.755809,
  -2.872824,
  -2.989839,
  -3.106854,
  -3.223869,
  -3.340884,
  -3.457899,
  -3.574914,
  -3.691929,
  -3.808944,
  -3.92596,
  -4.042975,
  -4.15999,
  -4.277005,
  -4.39402,
  -4.511035,
  -4.62805,
  -4.745065,
  -4.86208,
  -4.979095,
  -5.09611,
  -5.213125,
  -5.33014,
  -5.447156,
  -5.564171,
  -5.681186,
  -5.798201,
  -5.915216,
  -6.032231,
  -6.149246,
  -6.266261,
  -6.383276,
  -6.500291,
  -6.617306,
  -6.734321,
  -6.851336,
  -6.968352,
  -7.085367,
  -7.202382,
  -7.319397,
  -7.436412,
  -7.553427,
  -7.670442,
  -7.787457,
  -7.904472,
  -8.021487,
  -8.138502,
  -8.255517,
  -8.372533,
  -8.489548,
  -8.606563,
  -8.723578,
  -8.840593,
  -8.957608,
  -9.074623,
  -9.191638,
  -9.308653,
  -9.425668,
  -9.542683,
  -9.659698,
  -9.776713,
  -9.893729,
  -10.010744,
  -10.127759,
  -10.244774,
  -10.361789,
  -10.478804,
  -10.595819,
  -10.712834,
  -10.829849,
  -10.946864,
  -11.063879,
  -11.180894,
  -11.29791,
  -11.414925,
  -11.53194,
  -11.648955,
  -11.76597,
  -11.882985,
  -12,
]
`;

exports[`golden pipeline (b139.0 reference) > 5. LR4 baseline (non-Gaussian) — magnitude snapshot 1`] = `
[
  -18.863137,
  -18.629107,
  -18.395077,
  -18.161047,
  -17.927017,
  -17.692986,
  -17.458956,
  -17.224926,
  -16.990896,
  -16.756866,
  -16.522836,
  -16.288805,
  -16.054775,
  -15.820745,
  -15.586715,
  -15.352685,
  -15.118655,
  -14.884624,
  -14.650594,
  -14.416564,
  -14.182534,
  -13.948504,
  -13.714474,
  -13.480443,
  -13.246413,
  -13.012383,
  -12.778353,
  -12.544323,
  -12.310293,
  -12.076263,
  -11.842232,
  -11.608202,
  -11.374172,
  -11.140142,
  -10.906112,
  -10.672082,
  -10.438051,
  -10.204021,
  -9.969991,
  -9.735961,
  -9.501931,
  -9.267901,
  -9.03387,
  -8.79984,
  -8.56581,
  -8.33178,
  -8.09775,
  -7.86372,
  -7.629689,
  -7.395659,
  -7.161629,
  -6.927599,
  -6.693569,
  -6.459539,
  -6.225509,
  -5.991478,
  -5.757448,
  -5.523418,
  -5.289388,
  -5.055358,
  -4.821328,
  -4.587297,
  -4.353267,
  -4.119237,
  -3.885207,
  -3.651177,
  -3.417147,
  -3.183116,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  -0.064462,
  -0.181477,
  -0.298492,
  -0.415507,
  -0.532522,
  -0.649537,
  -0.766552,
  -0.883567,
  -1.000583,
  -1.117598,
  -1.234613,
  -1.351628,
  -1.468643,
  -1.585658,
  -1.702673,
  -1.819688,
  -1.936703,
  -2.053718,
  -2.170733,
  -2.287748,
  -2.404763,
  -2.521779,
  -2.638794,
  -2.755809,
  -2.872824,
  -2.989839,
  -3.106854,
  -3.223869,
  -3.340884,
  -3.457899,
  -3.574914,
  -3.691929,
  -3.808944,
  -3.92596,
  -4.042975,
  -4.15999,
  -4.277005,
  -4.39402,
  -4.511035,
  -4.62805,
  -4.745065,
  -4.86208,
  -4.979095,
  -5.09611,
  -5.213125,
  -5.33014,
  -5.447156,
  -5.564171,
  -5.681186,
  -5.798201,
  -5.915216,
  -6.032231,
  -6.149246,
  -6.266261,
  -6.383276,
  -6.500291,
  -6.617306,
  -6.734321,
  -6.851336,
  -6.968352,
  -7.085367,
  -7.202382,
  -7.319397,
  -7.436412,
  -7.553427,
  -7.670442,
  -7.787457,
  -7.904472,
  -8.021487,
  -8.138502,
  -8.255517,
  -8.372533,
  -8.489548,
  -8.606563,
  -8.723578,
  -8.840593,
  -8.957608,
  -9.074623,
  -9.191638,
  -9.308653,
  -9.425668,
  -9.542683,
  -9.659698,
  -9.776713,
  -9.893729,
  -10.010744,
  -10.127759,
  -10.244774,
  -10.361789,
  -10.478804,
  -10.595819,
  -10.712834,
  -10.829849,
  -10.946864,
  -11.063879,
  -11.180894,
  -11.29791,
  -11.414925,
  -11.53194,
  -11.648955,
  -11.76597,
  -11.882985,
  -12,
]
`;

exports[`golden pipeline (b139.0 reference) > 6. No HP (full-range) — magnitude snapshot 1`] = `
[
  -18.863137,
  -18.629107,
  -18.395077,
  -18.161047,
  -17.927017,
  -17.692986,
  -17.458956,
  -17.224926,
  -16.990896,
  -16.756866,
  -16.522836,
  -16.288805,
  -16.054775,
  -15.820745,
  -15.586715,
  -15.352685,
  -15.118655,
  -14.884624,
  -14.650594,
  -14.416564,
  -14.182534,
  -13.948504,
  -13.714474,
  -13.480443,
  -13.246413,
  -13.012383,
  -12.778353,
  -12.544323,
  -12.310293,
  -12.076263,
  -11.842232,
  -11.608202,
  -11.374172,
  -11.140142,
  -10.906112,
  -10.672082,
  -10.438051,
  -10.204021,
  -9.969991,
  -9.735961,
  -9.501931,
  -9.267901,
  -9.03387,
  -8.79984,
  -8.56581,
  -8.33178,
  -8.09775,
  -7.86372,
  -7.629689,
  -7.395659,
  -7.161629,
  -6.927599,
  -6.693569,
  -6.459539,
  -6.225509,
  -5.991478,
  -5.757448,
  -5.523418,
  -5.289388,
  -5.055358,
  -4.821328,
  -4.587297,
  -4.353267,
  -4.119237,
  -3.885207,
  -3.651177,
  -3.417147,
  -3.183116,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  -0.064462,
  -0.181477,
  -0.298492,
  -0.415507,
  -0.532522,
  -0.649537,
  -0.766552,
  -0.883567,
  -1.000583,
  -1.117598,
  -1.234613,
  -1.351628,
  -1.468643,
  -1.585658,
  -1.702673,
  -1.819688,
  -1.936703,
  -2.053718,
  -2.170733,
  -2.287748,
  -2.404763,
  -2.521779,
  -2.638794,
  -2.755809,
  -2.872824,
  -2.989839,
  -3.106854,
  -3.223869,
  -3.340884,
  -3.457899,
  -3.574914,
  -3.691929,
  -3.808944,
  -3.92596,
  -4.042975,
  -4.15999,
  -4.277005,
  -4.39402,
  -4.511035,
  -4.62805,
  -4.745065,
  -4.86208,
  -4.979095,
  -5.09611,
  -5.213125,
  -5.33014,
  -5.447156,
  -5.564171,
  -5.681186,
  -5.798201,
  -5.915216,
  -6.032231,
  -6.149246,
  -6.266261,
  -6.383276,
  -6.500291,
  -6.617306,
  -6.734321,
  -6.851336,
  -6.968352,
  -7.085367,
  -7.202382,
  -7.319397,
  -7.436412,
  -7.553427,
  -7.670442,
  -7.787457,
  -7.904472,
  -8.021487,
  -8.138502,
  -8.255517,
  -8.372533,
  -8.489548,
  -8.606563,
  -8.723578,
  -8.840593,
  -8.957608,
  -9.074623,
  -9.191638,
  -9.308653,
  -9.425668,
  -9.542683,
  -9.659698,
  -9.776713,
  -9.893729,
  -10.010744,
  -10.127759,
  -10.244774,
  -10.361789,
  -10.478804,
  -10.595819,
  -10.712834,
  -10.829849,
  -10.946864,
  -11.063879,
  -11.180894,
  -11.29791,
  -11.414925,
  -11.53194,
  -11.648955,
  -11.76597,
  -11.882985,
  -12,
]
`;
